--- a/views/login.html
+++ b/views/login.html
@@ -58,7 +58,7 @@
                         <label>Contraseña:</label>
                     <input type="password" name="clave" id="clave">
                     </p>
-                    <button class="button" type="submit"><a href="/">Enviar</button></a>
+                    <button class="button" type="submit"><a href="/"><label class="button-login">Enviar</label></button></a>
                 </form>
         </main>
 
@@ -84,7 +84,7 @@
                 , no hay nada que no puedas hace, porque estás
                 siempre protegid@</p>
         </section>
-        <section class="section-footer">
+        <section class="copyright">
             <h4>Copyrigth 1999-2020 Mercado Liebre S.R.L.</h4>
         </section>
 
