--- a/public/css/home.css
+++ b/public/css/home.css
@@ -105,8 +105,21 @@ section{
 .articulo-original{
     width: 90vw;
     padding: 5px;
-    box-shadow: 0px 0px 10px 0px rgb(100, 100, 100);
+    box-shadow: none;
+    transition: all 450ms;
+
 }
+
+.articulo-original:hover{
+    box-shadow: 0px 0px 10px 0px rgb(100, 100, 100); 
+
+}
+
+hr{
+    width: 75%;
+    opacity: 60%;
+}
+
 
 .article-box{
     width: 90%;
@@ -288,9 +301,14 @@ footer{
    article{
     padding-top: 5px; 
     padding-bottom: 5px;
-    box-shadow: 0px 0px 10px 0px rgb(100, 100, 100);
+    transition: box-shadow 0px;
 
-} 
+}
+
+    article:hove > .articulo-original{
+        box-shadow: 0px 0px 10px 0px rgb(100, 100, 100); 
+
+    }
 
 
 .section-display{
@@ -310,6 +328,7 @@ footer{
 
 .articulo-original{
     width: 50%;
+    height: 100%;
 }
 
 .article-box{
@@ -338,8 +357,18 @@ footer{
 
 .descripciones{
     font-size:11px;
-    display: flex;
+    height: 0vh;
+    display: none;
     justify-content: flex-start;
+    visibility: hidden;
+    overflow: hidden;
+    transition: all 450ms;
+}
+
+.descripción-caja:hover > .descripciones{
+    visibility: visible; 
+    height: 10vh;
+
 }
 
 
@@ -700,18 +729,29 @@ footer{
     /*-----------------------FOOTER---------------------*/
     
     footer{
+        display: flex;
         text-align: center;
-        width: 90%;
+        width: 100%;
         margin-top: 10px;
+        flex-wrap: wrap;
     
     }
     
     .section-footer{
-        width: 100%;
-        font-size: 90%;
-        justify-content:space-around;
+        width: 33%;
+        font-size: 75%;
     
     }
-       
-   }
-
+    
+    .imagen{
+        color: #0000FF;
+    }
+    
+    .text-pie{
+        width: 100%;
+    }
+    
+    .copyrigth{
+        width: 100%;
+    }
+}
