--- a/views/home.html
+++ b/views/home.html
@@ -56,9 +56,10 @@
             <p class="titulares"><strong>Basado en tu última visita</strong></p>
             <article class="articulo-original">
                 <img class="imagen-producto" src="/img/img-cafetera-moulinex.jpg" alt="cafetera">
+                <hr>
                 <div class="article-box"> 
-                    <!--<div class="descripción-caja">
-                        <li><span class="camion-verde"><i class="fas fa-truck"></i></span></li>-->   
+                    <div class="descripción-caja">
+                        <!--<li><span class="camion-verde"><i class="fas fa-truck"></i></span></li>-->
                         <div class="div-descripcion">
                             <p class="precio">$ 6.770</p>
                             <p class="descuentos">40% OFF</p>
@@ -70,6 +71,7 @@
             <br>
             <article class="articulo-original">
                 <img class="imagen-producto" src="/img/img-macbook-pro-2019.jpg" alt="computadora">
+                <hr>
                 <div class="article-box">
                     <div class="descripción-caja">
                         <!--<li><span class="camion-verde"><i class="fas fa-truck"></i></span></li>-->
@@ -84,6 +86,7 @@
             <br>
             <article class="articulo-original">
                 <img class="imagen-producto" src="/img/img-samsung-galaxy-s10.jpg" alt="celular">
+                <hr>
                 <div class="article-box">
                     <div class="descripción-caja">
                         <!--<li><span class="camion-verde"><i class="fas fa-truck"></i></span></li>-->
@@ -98,6 +101,7 @@
             <br>
             <article class="articulo-original">
                 <img class="imagen-producto" src="/img/img-tv-samsung-smart.jpg" alt="televisor">
+                <hr>
                 <div class="article-box">
                     <div class="descripción-caja">
                         <!--<li><span class="camion-verde"><i class="fas fa-truck delivery"></i></span></li>-->
@@ -115,6 +119,7 @@
             <p class="titulares"><strong>Sección de Ofertas</strong></p>
             <article class="articulo-original">
                 <img class="imagen-producto" src="/img/img-cafetera-moulinex.jpg" alt="cafetera">
+                <hr>
                 <div class="article-box">
                     <div class="descripción-caja">
                         <!--<li><span class="camion-verde"><i class="fas fa-truck delivery"></i></span></li>-->
@@ -129,6 +134,7 @@
             <br>
             <article class="articulo-original">
                 <img class="imagen-producto" src="/img/img-macbook-pro-2019.jpg" alt="computadora">
+                <hr>
                 <div class="article-box">
                     <div class="descripción-caja">
                         <!--<li><span class="camion-verde"><i class="fas fa-truck delivery"></i></span></li>-->
@@ -143,6 +149,7 @@
             <br>
             <article class="articulo-original">
                 <img class="imagen-producto" src="/img/img-samsung-galaxy-s10.jpg" alt="celular">
+                <hr>
                 <div class="article-box">
                     <div class="descripción-caja">
                         <!--<li><span class="camion-verde"><i class="fas fa-truck delivery"></i></span></li>-->
@@ -157,6 +164,7 @@
             <br>
             <article class="articulo-original">
                 <img class="imagen-producto" src="/img/img-tv-samsung-smart.jpg" alt="televisor">
+                <hr>
                 <div class="article-box">
                     <div class="descripción-caja">
                        <!--<li><span class="camion-verde"><i class="fas fa-truck delivery"></i></span></li>-->
