--- a/views/home.html
+++ b/views/home.html
@@ -20,12 +20,12 @@
                 <form action="" method="post" target="_blank">
                     <p>
                         <input class="formulario-1" type="search" placeholder="Buscar productos, marcas">
-                        <input class="formulario-1" type="submit" value="Buscar">
+                        <input class="formulario-2" type="submit" value="Buscar">
                     </p>
                 </form>
             </div>
             <div class="logo-tres">
-                <p><i class="fas fa-hand-holding-usd"></i>compra en cuotas y sin tarjeta de crédito
+                <p class="logo-cuotas"><i class="fas fa-hand-holding-usd"></i>compra en cuotas y sin tarjeta de crédito
                 </p>
             </div>
         </div>    
@@ -65,7 +65,7 @@
                             <p class="descuentos">40% OFF</p>
                         </div>
                         <p class="descripciones"><strong>Cafetera Moulinex</strong></p>
-                    </div>
+                      </div>  
                 </div>
             </article>
             <br>
