--- a/views/login.html
+++ b/views/login.html
@@ -17,12 +17,12 @@
                 <form action="" method="post" target="_blank">
                     <p>
                         <input class="formulario-1" type="search" placeholder="Buscar productos, marcas">
-                        <input class="formulario-1" type="submit" value="Buscar">
+                        <input class="formulario-2" type="submit" value="Buscar">
                     </p>
                 </form>
             </div>
             <div class="logo-tres">
-                <p><i class="fas fa-hand-holding-usd"></i>compra en cuotas y sin tarjeta de crédito
+                <p class="logo-cuotas"><i class="fas fa-hand-holding-usd"></i>compra en cuotas y sin tarjeta de crédito
                 </p>
             </div>
         </div>    
@@ -46,15 +46,15 @@
         </div>
     </header>
     <div class="banner"><img class= "banner-home" src="/img/img-home-banner.jpg" alt="banner"></div>
-        <main class="main-movil">
+        <main class="main-tablet">
             <section class= "section-display">
                 <p class="titulares"><strong>Login de Usuario</strong></p>
                 <form class="form-login" action="/login" method="POST"> 
-                    <p>
+                    <p class="usuario-pass">
                         <label>Nombre de usuario:</label>
                     <input type="text" name="usuario" id="usuario">
                     </p>
-                    <p>
+                    <p class="usuario-pass">
                         <label>Contraseña:</label>
                     <input type="password" name="clave" id="clave">
                     </p>
