--- a/public/css/home.css
+++ b/public/css/home.css
@@ -8,7 +8,7 @@
 
 body{
     font-family: 'Roboto', sans-serif;
-    margin: 0;
+    margin: 0px;
     width: 100vw;
 }
 
@@ -22,6 +22,8 @@ header{
 .div-versionuno{
     display: flex;
     flex-wrap: wrap;
+    width: 100%;
+    height: 12vh;
 }
 
 .logoliebre{
@@ -34,19 +36,31 @@ header{
 
 .formulario{
     width: 50%;
+
+
 }
 
 .formulario-1{
     width: 40%;
 }
 
-.logo-tres{
-    width: 90%;
-    padding: 2%;
-    display: flex;
-    justify-content: space-around;
-    align-self: flex-end;
+.formulario-2{
+    width: 35%;
+}
 
+.logo-tres{
+    width: 95%;
+    padding: 0;
+    font-size: 80%;    
+    justify-content: center;
+    align-items: center;
+
+}
+
+.logo-cuotas{
+    width: 100%;
+    justify-content: center;
+    text-align: center;
 }
 
 nav{
@@ -98,7 +112,7 @@ ul{
 }
 
 section{
-    width: 90%;
+    width: 100%;
   background: white;
 }
 
@@ -199,6 +213,16 @@ footer{
     margin-top: 10px;
 }
 
+.imagen{
+    color: #0000FF;
+    overflow: hidden;
+    transition: color 450ms;
+}
+
+.imagen:hover{
+    color: #FFFF00;
+}
+
 /*-----------------------MEDIA-QUERYS TABLET---------------------*/
 @media (min-width: 361px){
 
@@ -208,6 +232,7 @@ footer{
     width: 100vw;
     height: 100%;
     }  
+
  
     .div-versionuno{
         display: flex;
@@ -223,9 +248,6 @@ footer{
     
     .formulario{
         width: 33%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
     }
     
     .logo-tres{
@@ -308,8 +330,8 @@ footer{
     article:hove > .articulo-original{
         box-shadow: 0px 0px 10px 0px rgb(100, 100, 100); 
 
+    
     }
-
 
 .section-display{
     display: flex;
@@ -420,7 +442,7 @@ footer{
         
         .logo-tres{
             width: 30%;
-            font-size: 60%;
+            font-size: 65%;
         }
     
         .div-navbar{
@@ -498,7 +520,7 @@ footer{
     
     .section-display{
         display: flex;
-        width: 90%;
+        width: 100%;
         flex-wrap: wrap;
     }
 
@@ -583,7 +605,7 @@ footer{
         }
     
         .logoliebre{
-            width: 34%;
+            width: 33%;
         }
         
         .formulario{
@@ -592,10 +614,18 @@ footer{
             align-items: center;
             justify-content: center;
         }
+
+        .formulario-1{
+            width: 70%;
+        }
+
+        .formulario-2{
+            width: 20%;
+        }
         
         .logo-tres{
-            width: 30%;
-            font-size: 60%;
+            width: 33%;
+            font-size: 80%;
         }
     
         .div-navbar{
@@ -622,7 +652,7 @@ footer{
         display: flex;
         justify-content: center;
         margin: 0px;
-        font-size: 60%;
+        font-size: 80%;
        }
     
        .listado-2{
@@ -630,7 +660,7 @@ footer{
         display: flex;
         justify-content: center;
         margin: 0px;
-        font-size: 60%;
+        font-size: 80%;
      
        }
        
@@ -673,7 +703,7 @@ footer{
     
     .section-display{
         display: flex;
-        width: 95%;
+        width: 100%;
         flex-wrap: wrap;
         justify-content: space-around;
         padding: 10px;
